fixed note field overflow issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@ nav {
   height: 64px;
   border-bottom: 1px solid #dadce0;
   padding: 8px;
-  margin: 0 10px;
+  margin: 0 10px 2px 10px;
   color: #5f6368;
 }
 
