--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -13,7 +13,10 @@
   border-radius: 8px;
   position: relative;
   cursor: pointer;
+  box-sizing: border-box;
+  padding: 10px; /* Add padding to ensure text is well within the borders */
 }
+
 .note:hover {
   box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302),
     0 2px 6px 2px rgba(60, 64, 67, 0.149);
@@ -21,12 +24,23 @@
 
 .note .title {
   width: 100%;
-  margin: 15px 0 0 15px;
+  margin: 10px 0 0 0; /* Adjust margin to fit within padding */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  box-sizing: border-box; /* Ensure padding is included in the element's width */
 }
 
 .note .text {
   width: 100%;
-  margin: 10px 0 0 15px;
+  margin: 10px 0 0 0; /* Adjust margin to fit within padding */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  box-sizing: border-box; /* Ensure padding is included in the element's width */
 }
 
 .note .note-footer {
@@ -34,7 +48,6 @@
   display: flex;
   padding: 0;
   justify-content: center;
-  /* visibility: visible; */
 }
 
 .note-footer .tooltip.hidden {
@@ -44,7 +57,6 @@
 .note-footer .tooltip.visible {
   visibility: visible;
 }
-
 
 .note-footer .material-symbols-outlined {
   color: #5f6368;
