--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
   top: 64px;
   display: flex;
   flex-direction: column;
-  margin-top: 15px;
+  margin-top: 17px;
   color: #5f6368;
   width: 80px;
   overflow-x: hidden;
